# crossword-generator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  book.tex  index.html  package-lock.json  package.json  verify-build.sh  vite.config.ts
cli/: Cargo.toml
cli/src/: book.rs  cover.rs  latex.rs  main.rs
docs/: crossword_wasm.d.ts  crossword_wasm.js  crossword_wasm_bg.wasm.d.ts  index.html
docs/assets/: crossword.worker-BOTakmh1.js  crossword.worker-BOZ5CaN4.js  crossword.worker-BWSOlvjQ.js  crossword.worker-BY5DpO2T.js  crossword.worker-BanTr_5c.js  crossword.worker-Bhom8N3q.js  crossword.worker-C4T6gIk1.js  crossword.worker-C5EVfGdU.js  crossword.worker-CIauTyDT.js  crossword.worker-CW1Zp2c9.js  crossword.worker-Ck4J2Swb.js  crossword.worker-ClNHAIId.js  crossword.worker-Cs-GoWoh.js  crossword.worker-D-JGyitx.js  crossword.worker-D0pU2fv2.js  crossword.worker-DXJvuFgI.js  crossword.worker-DcrqR28u.js  crossword.worker-DkFw01Vc.js  crossword.worker-DqDGGyv2.js  crossword.worker-Dqj6e-9d.js  crossword.worker-RdLnzL6D.js  crossword.worker-VBbc_afM.js  crossword.worker-YmnaeO7L.js  crossword.worker-a8Un8h3c.js  crossword.worker-m6o2hDwX.js  crossword.worker-ny5av3Kn.js  crossword_core-BA-Onxqm.js  crossword_core-BMx_QU28.js  crossword_core-CAdHMq3I.js  crossword_core-CBi06SUT.js  crossword_core-CFJreYa9.js  crossword_core-CeZzSvON.js  crossword_core-CgubJ3l_.js  crossword_core-CqWKmsvF.js  crossword_core-CzXJ9_Bl.js  crossword_core-Dhy5tMqg.js  crossword_core-DsNgZt5G.js  crossword_core-S2UXUvEr.js  crossword_core-a0Oqgwnj.js  crossword_core-kELlrDv3.js  (+43 more)
scripts/: copy-wasm.js
src/: App.tsx  index.css  main.tsx  print.css
src/components/: CluesList.tsx  ControlPanel.tsx  CrosswordGrid.tsx  ErrorBoundary.tsx  LoadingOverlay.tsx
src/types/: crossword.ts
src/wasm/: Cargo.toml
src/wasm/src/: debug.rs  dictionary.rs  encoder.rs  lib.rs  solution.rs  solver.rs
wasm/: Cargo.toml  clean_allowlist.txt
wasm/src/: debug.rs  dictionary.rs  lib.rs  solver.rs
(+2 files in other folders)
