[package]
name = "crossword-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crossword-cli"
path = "src/main.rs"

[dependencies]
crossword-core = { path = "../wasm" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = "1.0"
