[package]
name = "crossword-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM-specific dependencies (conditional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-time = { version = "1.0", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Always available dependencies
serde = { workspace = true }
serde_json = "1.0"
varisat = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[features]
default = []
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:web-time",
    "dep:web-sys",
    "dep:console_error_panic_hook",
    "dep:getrandom",
]
debug = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
