[package]
name = "crossword-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
varisat = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-time = "1.0"
web-sys = { version = "0.3", features = ["console"] }
rand = { version = "0.8", features = ["small_rng"] }

[features]
debug = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
